# Graph-Mamba

./: LICENSE  README.md  main.py  poetry_steps.txt  pyproject.toml  requirements.txt  requirements_conda.txt
configs/Exphormer/: MNIST-EX+MPNN-1.yaml  amazon-computers.yaml  amazon-photo.yaml  arxiv.yaml  arxiv2.yaml  cifar10.yaml  cifar10_h.yaml  citeseer-gcn.yaml  citeseer.yaml  cluster-EX.yaml  cluster.yaml  cluster_h.yaml  coauthor-cs.yaml  coauthor-physics.yaml  coco.yaml  computer.yaml  cs.yaml  malnettiny.yaml  mnist.yaml  mnist_h.yaml  pattern.yaml  pattern_h.yaml  photo.yaml  physics.yaml  voc.yaml  voc_h.yaml
configs/Exphormer_LRGB/: cocosuperpixels-EX1.yaml  cocosuperpixels-EX2.yaml  cocosuperpixels-EX3.yaml  pcqm-contact-EX1.yaml  pcqm-contact-EX2.yaml  pcqm-contact-EX3.yaml  peptides-func-EX1.yaml  peptides-struct-EX.yaml  vocsuperpixels-EX1.yaml
configs/GPS/: cifar10-GPS.yaml  cluster-GPS.yaml  cocosuperpixels-GPS.yaml  malnettiny-GPS.yaml  mnist-GPS.yaml  pattern-GPS.yaml  pcqm-contact-GPS.yaml  peptides-func-GPS+RWSE.yaml  peptides-func-GPS.yaml  peptides-struct-GPS.yaml  vocsuperpixels-GPS.yaml
configs/Mamba/: cifar10-EX.yaml  cluster-EX.yaml  cluster-GPS-Benchmark.yaml  cocosuperpixels-EX.yaml  cocosuperpixels-GPS-Benchmark.yaml  malnettiny-EX.yaml  malnettiny-GPS-old-hp.yaml  mnist-EX.yaml  pattern-EX.yaml  pcqm-contact-EX.yaml  pcqm-contact-GPS-Benchmark.yaml  pcqm-contact-GPS-tuning.yaml  peptides-func-EX.yaml  peptides-struct-EX.yaml  peptides-struct-GPS-Benchmark.yaml  vocsuperpixels-EX.yaml
notebooks/: mamba.ipynb
(+106 files in other folders)
