[tool.poetry]
name = "graph-mamba"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.13.0"
torch-geometric = "2.0.4"
transformers = "^4.18.0"
torchmetrics = "0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
